--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "isomorphic-unfetch": "^3.0.0",
     "vue": "^2.6.6"
   },
   "devDependencies": {
