--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "axios": "^0.18.0",
     "express": "^4.16.4",
     "isomorphic-unfetch": "^3.0.0",
-    "vue": "^2.6.6"
+    "vue": "^2.6.6",
+    "vue-scroll-reveal": "^1.0.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.5.0",
